# boostmydeal_rebrand

./: CLAUDE.md  docker-compose.yml
dashboard_backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  compose.yaml  composer.json
dashboard_backend/bootstrap/: app.php
dashboard_backend/config/: cors.php  database.php  filesystems.php  qdrant.php  scalar.php  scribe.php  services.php  tenancy.php
dashboard_backend/docker/: start-container
dashboard_backend/public/: openapi.yaml
dashboard_backend/routes/: api.php  tenant.php  web.php
dashboard_backend/supervisor/: queue-worker.conf
dashboard_backend/tests/: TestCase.php
front/: .gitignore  Dockerfile  middleware.ts  package-lock.json  package.json
livekit-voice-agent/: .env.example  .gitignore  Dockerfile  pyproject.toml
livekit-voice-agent/src/: agent.py  dependencies.py  main.py
livekit-voice-agent/src/lib/agent/: assistant.py  language.py  recording.py
livekit-voice-agent/src/lib/agent/features/: __init__.py  configurator.py
livekit-voice-agent/src/lib/agent/providers/: base.py
livekit-voice-agent/src/lib/agent/providers/llm/: __init__.py  anthropic.py  openai.py  openai_realtime.py
livekit-voice-agent/src/lib/agent/providers/stt/: __init__.py  deepgram.py  openai.py
livekit-voice-agent/src/lib/agent/providers/tts/: __init__.py  eleven_labs.py  smallest_ai.py
livekit-voice-agent/src/lib/agent/session/: prompt_builder.py  session_builder.py
livekit-voice-agent/src/models/: models.py
livekit-voice-agent/src/routers/: calls.py  sip_trunk.py
livekit-voice-agent/tests/: test_agent.py
(+165 files in other folders)
